Fix size of image in header using css
Before the change, the image in header was distorted to having a height
of 100px without being proportional to the width. This was as the img
type selector had max-height to 100px and width auto. However due to
separate declaration placed on the image in overview, it became
distorted. As a result, the declarations for img were all removed and
declarations were placed separately/individually on the class for image
in overview and class for the group of 4 images, respectively.

--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,6 @@ body {
     margin: 0px;
 }
 
-img {
-    max-height: 100px;
-    width: auto;
-}
-
 ul{
     padding-left: 0px;
     list-style-type: none;
@@ -63,6 +58,8 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
+    min-width: 100px;
+    height: auto;
 }
 
 .size {
@@ -122,6 +119,8 @@ button {
 .border {
     border: 2px solid #3882F6;
     border-radius: 10px;
+    max-height: 100px;
+    width: auto;
 }
 
 .text {
@@ -153,4 +152,8 @@ button {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 700;
     color: #1F2937;
+}
+
+.end {
+
 }
